Added message edit feature
